Polished and added core features to the pages.

--- a/button.css
+++ b/button.css
@@ -14,7 +14,7 @@
     --button-text-color-hover: var(--button-background-color);
     --border-color: #7D8082;
     --button-background-color: #ece8e1;
-    --highlight-color: #66a103;
+    --highlight-color: #6f8704;
     --button-inner-border-color: transparent;
     --button-bits-color: #0f1923;
     --button-bits-color-hover: var(--button-background-color);
