--- a/slideshow.css
+++ b/slideshow.css
@@ -62,7 +62,7 @@
     background-color: #717171;
   }
   
-  /* Fading animation */
+  /* Fading animation for sliding images */
   .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
