--- a/default.css
+++ b/default.css
@@ -10,7 +10,6 @@
 html, body{
     padding: 0;
     margin: 0;
-    padding-bottom: 50px;
 }
 
 h1, h2, h3, h4, h5, h6, strong{
@@ -82,6 +81,7 @@ nav{
 .main-container{
     width: 1200px;
     margin: 0 auto;
+    min-height: calc(100vh - 50px);
 }
 
 .greeting-wrapper{
@@ -213,7 +213,6 @@ iframe {
 }
 
 footer{
-    position: fixed;
     width: 100%;
     bottom: 0;
     display: flex;
